test_regress/t/t_assignment_compatibility_bad.out
%Error: t/t_assignment_compatibility_bad.v:25:20: Illegal assignment: Unmatched array sizes in dimension 0 (3 v.s. 2)
                                                : ... note: In instance 't'
   25 |   assign unpackedB = unpackedA;
      |                    ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_assignment_compatibility_bad.v:26:20: Illegal assignment: Unmatched number of unpacked dimensions (1 v.s. 2)
                                                : ... note: In instance 't'
   26 |   assign unpackedB = unpackedC;
      |                    ^
%Error: t/t_assignment_compatibility_bad.v:27:20: Illegal assignment: Unmatched array sizes in dimension 0 (4 v.s. 3)
                                                : ... note: In instance 't'
   27 |   assign unpackedD = unpackedC;
      |                    ^
%Error: t/t_assignment_compatibility_bad.v:28:20: Illegal assignment: Array element types are not equivalent ('struct{}$unit::struct_t' v.s. 'logic')
                                                : ... note: In instance 't'
   28 |   assign unpackedE = unpackedD;
      |                    ^
%Warning-WIDTHEXPAND: t/t_assignment_compatibility_bad.v:28:20: Operator ASSIGNW expects 64 bits on the Assign RHS, but Assign RHS's VARREF 'unpackedD' generates 1 bits.
                                                              : ... note: In instance 't'
   28 |   assign unpackedE = unpackedD;
      |                    ^
                      ... For warning description see https://verilator.org/warn/WIDTHEXPAND?v=latest
                      ... Use "/* verilator lint_off WIDTHEXPAND */" and lint_on around source to disable this message.
%Error: t/t_assignment_compatibility_bad.v:29:23: Illegal assignment: 'logic$[0:1]' is not assignment compatible with 'logic'
                                                : ... note: In instance 't'
   29 |   assign nonAggregate = unpackedA;
      |                       ^
%Error: t/t_assignment_compatibility_bad.v:30:20: Illegal assignment: Associative arrays are assignment compatible only with associative arrays
                                                : ... note: In instance 't'
   30 |   assign unpackedA = assocArrayA;
      |                    ^
%Error: Exiting due to
